# mup

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  NEWS  README  configure.ac  simple.makefile
.github/workflows/: buildMacOS.yaml  buildUbuntu.yaml
doc/: Makefile.am  charlist  quickref.t  uguide.t
doc/htmldocs/: Macinst.html  Makefile.am  blind.html  faq.html  mupfeat.html  overview.html  usercomm.html  whatsnew.html  winrun.html
doc/manpages/: Makefile.am  mkmupfnt.1  mup.1  mupdisp.1  mupmate.1  mupprnt.1
lib/: Makefile.am  rational.c
mup-input/: Makefile.am
mup-input/examples/: Cooley.mup  Makefile.am  echoes2.mup  patient.mup  quin.mup  sample.mup  template.mup  tunedemo.mup  victimae.mup  waltz10.mup  waltz3.mup
mup-input/includes/: Makefile.am  cyrillic  gen_midi  grids  grids2  guitar  helmholtz_accs  quarterstep_accs  tabstems  ukelele
mup-input/testfiles/: Makefile.am  accparen.mup  addtimes.mup  alignped.mup  allchars.mup  altgrid.mup  assign.mup  beaming.mup  beamstem.mup  bulge.mup  cancelkey.mup  cancelkey2.mup  chordinput.mup  chordtrans.mup  chordtranslation.mup  circledtext.mup  clefsig.mup  coord.mup  crossbeams.mup  css.mup  curves.mup  emptymeas.mup  endings.mup  extchar.mup  fonts.mup  grace.mup  groupalign.mup  gtc.mup  hasspace.mup  ifclause.mup  interfere.mup  keysig.mup  labels.mup  latin1.mup  ledger.mup  lyrics.mup  mac_arith.mup  macros.mup  marks.mup  measnum.mup  (+63 more)
mup-input/testfiles/bad-input/: chordinput_err.mup  context_err.mup  input01_err.mup  input02_err.mup  input03_err.mup  input04_err.mup  input05_err.mup  input06_err.mup  input07_err.mup  input08_err.mup  input09_err.mup  input10_err.mup  input11_err.mup  mac_arith_err.mup  macparm_err.mup  midi_err.mup  mrpt_defoct_err.mup  mrpt_midmeas_err.mup  mrpt_mix1_err.mup  mrpt_mix2_err.mup  mrpt_multirest_err.mup  mrpt_nonspace_err.mup  mrpt_numstaffs1_err.mup  mrpt_numstaffs2_err.mup  mrpt_numstaffs3_err.mup  mrpt_params_err.mup  mrpt_repeat_err.mup  mrpt_time1_err.mup  mrpt_time2_err.mup  mrpt_toofewa2_err.mup  mrpt_toofewa4_err.mup  mrpt_toofewb1_err.mup  mrpt_toofewb2_err.mup  mrpt_toofewb4_err.mup  mrpt_type_err.mup  restart_err.mup  roll_err.mup  shapes_err.mup  tab_err.mup  usersym_err.mup
mup-input/testfiles/test-midi/: Makefile.am
packaging/: Info.plist  Makefile.am  PKGBUILD  builddeb  builddmg  buildexe  buildrpm  install.nsi.in  mup.spec.in
src/: Makefile.am
src/include/: Makefile.am  allocdebug.h  defines.h  extchar.h.in  globals.h  muschar.h.in  rational.h  ssvused.h.in  structs.h
src/mkmupfnt/: Makefile.am  mkmupfnt.c
src/mup/: Makefile.am  abshorz.c  absvert.c  assign.c  beaming.c  beamstem.c  brac.c  charinfo.c  check.c  debug.c  errors.c  exprgram.y  font.c  globals.c  gram.y  grpsyl.c  ifgram.y  keymap.c  lex.l  locvar.c  lyrics.c  macros.c  main.c  mainlist.c  map.c  midi.c  midigrad.c  miditune.c  midiutil.c  mkchords.c  nxtstrch.c  parstssv.c  parstuff.c  phrase.c  plutils.c  print.c  prntdata.c  prntmisc.c  prnttab.c  prolog.ps.in  (+15 more)
src/mupdisp/: Makefile.am  at386.c  dispttyp.h  do_cmd.c  dos.c  genfile.c  help  init.c  linvga.c  mupdisp.c  mupdisp.h  waitmsg  xterm.c
src/mupmate/: Config.C  Config.H  Edit.C  Edit.H  File.C  File.H  Help.C  Help.H  Main.C  Main.H  Makefile.am  MupMate.icns.b64  MupMateDoc.icns.b64  Preferences.C  Preferences.H  Run.C  Run.H  apple.mm  globals.H  mup16.xpm  mup32.xpm  mup48.xpm  mupmate.rc  resource.h  utils.C  utils.H
src/mupprnt/: Makefile.am  mupprnt  mupprnt.bat
tools/: Makefile.am  mup.vim
tools/doc/: Makefile.am  addoffset.c  gen_ext_mup.c  mkmuscharps.sh  mkuggifs  mvtoc.c  tr2html.l  ugexi.c
tools/mup/: Makefile.am  bbox.c  genhdr.c  getfontinfo.ps  mkprolog.c  smadi.c
tools/mupdisp/: Makefile.am  ps2bm.c
tools/mupmate/: Makefile.am  mktemplateC.c
tools/test/: Makefile.am  reggen2.c
