SUBDIRS = manpages htmldocs

uguide_files = \
	uguide/adjust.html \
	uguide/altinp.html \
	uguide/autocue.html \
	uguide/auxinfo.html \
	uguide/bars.html \
	uguide/basics.html \
	uguide/brackmac.html \
	uguide/breaks.html \
	uguide/breathmk.html \
	uguide/cadenza.html \
	uguide/chant.html \
	uguide/chordinp.html \
	uguide/chrdattr.html \
	uguide/cmdargs.html \
	uguide/contexts.html \
	uguide/cres.html \
	uguide/crossbar.html \
	uguide/crossst.html \
	uguide/debug.html \
	uguide/exit.html \
	uguide/ext_1.gif \
	uguide/ext_2.gif \
	uguide/ext_3.gif \
	uguide/ext_4.gif \
	uguide/fileline.html \
	uguide/fontfile.html \
	uguide/gensyn.html \
	uguide/gradmidi.html \
	uguide/headfoot.html \
	uguide/heeltoe.html \
	uguide/ichdattr.html \
	uguide/ifclause.html \
	uguide/include.html \
	uguide/index.html \
	uguide/intro.html \
	uguide/invisbar.html \
	uguide/linecurv.html \
	uguide/lyrics.html \
	uguide/lyrtag.html \
	uguide/macros.html \
	uguide/mantup.html \
	uguide/manual.html \
	uguide/midi.html \
	uguide/midmeas.html \
	uguide/mixtsig.html \
	uguide/mugex100.gif \
	uguide/mugex101.gif \
	uguide/mugex102.gif \
	uguide/mugex103.gif \
	uguide/mugex104.gif \
	uguide/mugex105.gif \
	uguide/mugex106.gif \
	uguide/mugex107.gif \
	uguide/mugex108.gif \
	uguide/mugex109.gif \
	uguide/mugex10.gif \
	uguide/mugex110.gif \
	uguide/mugex111.gif \
	uguide/mugex112.gif \
	uguide/mugex113.gif \
	uguide/mugex114.gif \
	uguide/mugex115.gif \
	uguide/mugex116.gif \
	uguide/mugex117.gif \
	uguide/mugex118.gif \
	uguide/mugex119.gif \
	uguide/mugex11.gif \
	uguide/mugex120.gif \
	uguide/mugex121.gif \
	uguide/mugex122.gif \
	uguide/mugex123.gif \
	uguide/mugex124.gif \
	uguide/mugex125.gif \
	uguide/mugex126.gif \
	uguide/mugex127.gif \
	uguide/mugex128.gif \
	uguide/mugex129.gif \
	uguide/mugex130.gif \
	uguide/mugex131.gif \
	uguide/mugex132.gif \
	uguide/mugex133.gif \
	uguide/mugex12.gif \
	uguide/mugex13.gif \
	uguide/mugex14.gif \
	uguide/mugex15.gif \
	uguide/mugex16.gif \
	uguide/mugex17.gif \
	uguide/mugex18.gif \
	uguide/mugex19.gif \
	uguide/mugex20.gif \
	uguide/mugex21.gif \
	uguide/mugex22.gif \
	uguide/mugex23.gif \
	uguide/mugex24.gif \
	uguide/mugex25.gif \
	uguide/mugex26.gif \
	uguide/mugex27.gif \
	uguide/mugex28.gif \
	uguide/mugex29.gif \
	uguide/mugex2.gif \
	uguide/mugex30.gif \
	uguide/mugex31.gif \
	uguide/mugex32.gif \
	uguide/mugex33.gif \
	uguide/mugex34.gif \
	uguide/mugex35.gif \
	uguide/mugex36.gif \
	uguide/mugex37.gif \
	uguide/mugex38.gif \
	uguide/mugex39.gif \
	uguide/mugex3.gif \
	uguide/mugex40.gif \
	uguide/mugex41.gif \
	uguide/mugex42.gif \
	uguide/mugex43.gif \
	uguide/mugex44.gif \
	uguide/mugex45.gif \
	uguide/mugex46.gif \
	uguide/mugex47.gif \
	uguide/mugex48.gif \
	uguide/mugex49.gif \
	uguide/mugex4.gif \
	uguide/mugex50.gif \
	uguide/mugex51.gif \
	uguide/mugex52.gif \
	uguide/mugex53.gif \
	uguide/mugex54.gif \
	uguide/mugex55.gif \
	uguide/mugex56.gif \
	uguide/mugex57.gif \
	uguide/mugex58.gif \
	uguide/mugex59.gif \
	uguide/mugex5.gif \
	uguide/mugex60.gif \
	uguide/mugex61.gif \
	uguide/mugex62.gif \
	uguide/mugex63.gif \
	uguide/mugex64.gif \
	uguide/mugex65.gif \
	uguide/mugex66.gif \
	uguide/mugex67.gif \
	uguide/mugex68.gif \
	uguide/mugex69.gif \
	uguide/mugex6.gif \
	uguide/mugex70.gif \
	uguide/mugex71.gif \
	uguide/mugex72.gif \
	uguide/mugex73.gif \
	uguide/mugex74.gif \
	uguide/mugex75.gif \
	uguide/mugex76.gif \
	uguide/mugex77.gif \
	uguide/mugex78.gif \
	uguide/mugex79.gif \
	uguide/mugex7.gif \
	uguide/mugex80.gif \
	uguide/mugex81.gif \
	uguide/mugex82.gif \
	uguide/mugex83.gif \
	uguide/mugex84.gif \
	uguide/mugex85.gif \
	uguide/mugex86.gif \
	uguide/mugex87.gif \
	uguide/mugex88.gif \
	uguide/mugex89.gif \
	uguide/mugex8.gif \
	uguide/mugex90.gif \
	uguide/mugex91.gif \
	uguide/mugex92.gif \
	uguide/mugex93.gif \
	uguide/mugex94.gif \
	uguide/mugex95.gif \
	uguide/mugex96.gif \
	uguide/mugex97.gif \
	uguide/mugex98.gif \
	uguide/mugex99.gif \
	uguide/mugex9.gif \
	uguide/multirst.html \
	uguide/multsong.html \
	uguide/mupindex.html \
	uguide/muschar.gif \
	uguide/music.html \
	uguide/muspaper.html \
	uguide/mussym.html \
	uguide/nestmac.html \
	uguide/newscore.html \
	uguide/noteattr.html \
	uguide/octave.html \
	uguide/param.html \
	uguide/pedal.html \
	uguide/phrase.html \
	uguide/pianored.html \
	uguide/prnttext.html \
	uguide/pscoord.html \
	uguide/pstools.html \
	uguide/roll.html \
	uguide/running.html \
	uguide/shapes.html \
	uguide/shaped.html \
	uguide/sharehd.html \
	uguide/slantxt.html \
	uguide/slashmrk.html \
	uguide/stuff.html \
	uguide/tabstaff.html \
	uguide/tags.html \
	uguide/tempochg.html \
	uguide/textmark.html \
	uguide/textstr.html \
	uguide/tieacc.html \
	uguide/trillacc.html \
	uguide/trnspose.html \
	uguide/tuning.html \
	uguide/tuplets.html \
	uguide/udefsym.html \
	uguide/utilpgms.html \
	uguide/verses.html \
	uguide/withmac.html

ps_files = quickref.ps uguide.ps
EXTRA_DIST = uguide.t quickref.t charlist $(uguide_files) $(ps_files)
mup_doc_dir = $(datadir)/doc/packages/$(PACKAGE)
mup_doc__DATA = $(ps_files)
mup_uguide_dir = $(mup_doc_dir)/uguide
mup_uguide__DATA = $(uguide_files)

muschar.ps: ../src/include/muschar.h ../src/mup/prolog.ps ../tools/doc/mkmuscharps.sh
	../tools/doc/mkmuscharps.sh ../src/mup/prolog.ps < ../src/include/muschar.h

quickref.ps: quickref.t ../src/mup/prolog.ps muschar.ps
	$(GROFF) -t -Tps quickref.t | $(SED) -e "/BeginProlog/r ../src/mup/prolog.ps" > quickref.ps

uguide.mm: uguide.t ../tools/doc/ugexi muschar.ps ext_1.ps ext_2.ps ext_3.ps ext_4.ps ../src/mup/mup
	MUPPATH=$$(pwd)/../mup-input/includes MUPQUIET=1 PATH=$$(pwd)/../src/mup:$$PATH ../tools/doc/ugexi < uguide.t > uguide.mm

uguide.ps: uguide.mm ../tools/doc/mvtoc ../src/mup/prolog.ps
	$(GROFF) -t -Tps -mm -rN2 uguide.mm | $(SED) -e "/BeginProlog/r ../src/mup/prolog.ps" > uguide.ps.tmp
	../tools/doc/mvtoc uguide.ps.tmp > uguide.ps
	rm uguide.ps.tmp

ext_1.mup ext_2.mup ext_3.mup ext_4.mup: charlist ../src/mup/fontdata.c ../tools/doc/gen_ext_mup
	../tools/doc/gen_ext_mup

ext_1.ps ext_2.ps ext_3.ps ext_4.ps: ext_1.mup ext_2.mup ext_3.mup ext_4.mup ../src/mup/mup
	for p in 1 2 3 4 ; do ../src/mup/mup ext_$$p.mup | $(SED) -e "/Copyright/,/Set up extended character set fonts/d" -e "/BeginFeature/,/EndFeature/d" -e "/%%Trailer/,/%%DocumentFonts/d"  -e "/%%Page/d" > ext_$$p.ps; done

$(uguide_files): uguide.mm ../tools/doc/tr2html ../tools/doc/mkuggifs ../src/mup/prolog.ps muschar.ps
	mkdir -p uguide
	(cd uguide ; cp ../param_index . ; ../../tools/doc/tr2html < ../uguide.mm > /dev/null ; rm param_index)
	(cd uguide; ../../tools/doc/mkuggifs  CAT=$(CAT) GS=$(GS) EXPR=$(EXPR) SORT=$(SORT) PPMTOGIF=$(PPMTOGIF) GREP=$(GREP) EGREP=$(EGREP) )
